<resources>
    <string name="follow">Follow</string>
    <string name="follow_all">Follow All</string>
    <string name="action_invite">Invite Friends</string>
    <string name="update">Update</string>
    <string name="empty_video_list">There is no learning video at the moment.</string>
    <string name="server_response">"Server response: "</string>
    <string name="link">Link %1$s</string>
    <string name="link_description">You need to link your %1$s account before sharing…</string>
    <string name="link_now">Link now!</string>
    <string name="later">Later</string>
    <string name="please_update_token_title">Social authentication expired</string>
    <string name="discussion">Discussion</string>
    <string name="more_character">…</string>
    <string name="buy_sell">Buy/Sell</string>
    <string name="share_to">Share to…</string>
    <string name="comment">Comment</string>
    <string name="timeline_discussion_post">@string/post</string>
    <string name="timeline_discussion_comment_box_hint">Type your comment…</string>
    <string name="discussion_loaded">All discussions loaded</string>
    <string name="discussion_loading">Loading</string>
    <string name="discussion_empty">Be the first to discuss this.</string>
    <string name="news_view_on_web">View on the Web</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="start_new_discussion">Start a New Discussion</string>
    <string name="error_empty_comment">Comment should not be empty</string>
    <string name="error_not_enough_information">Not enough information, try again</string>
    <string name="via">" via "</string>
    <string name="broadcast_success">Send message success</string>
    <string name="broadcast_error">Send message error</string>
    <string name="broadcast_message_title">Broadcast Message</string>
    <string name="broadcast_message_change_type_hint">Choose follower to send message</string>
    <string name="broadcast_message_no_follower_hint">Sorry,you cannot send message because you don\'t have such type
        follower
    </string>
    <string name="broadcast_message_content_length_hint">The message cannot be empty</string>
    <string name="broadcast_message_sending_hint">Sending message…</string>
    <string name="broadcast_message_waiting">Waiting</string>
    <string name="social_followers">Followers</string>
    <string name="social_heroes">Heroes</string>
    <string name="common_loading_error">Sorry, there is something wrong</string>
    <string name="no_message">You don\'t have any message yet.</string>
    <string name="message_fetch_error">Sorry, something went wrong. \nPress to retry.</string>
    <string name="security_discussion_add">+ Start a New Discussion</string>
    <string name="post">Post</string>
    <string name="discussion_new_post_hint">how do you feel about %s?</string>
    <string name="error_discussion_empty_post">Discussion cannot be empty</string>
    <string name="at">"@"</string>
    <string name="hashtag">$</string>
    <string name="discussion_edit_post_subtitle">on %s</string>
    <string name="team_credit">Made with love in Singapore and Shanghai</string>
    <string name="about_screen_secure_by">Secure by:</string>
    <string name="about_screen_text_processing_by">Text processing by:</string>
    <string name="about_screen_sentiment_analysis_by">Sentiment analysis by:</string>
    <string name="send_fake_push" translatable="false">Send a fake PushNotification</string>
    <string name="buy_sell_loading_ask_price">Loading ask price…</string>
    <string name="buy_sell_loading_bid_price">Loading bid price…</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="chart_loading_image">Loading chart image…</string>
    <string name="plus_symbol">+</string>
    <string name="tap_stream_type_google_install" translatable="false">android-tradehero-google-install</string>
    <string name="tap_stream_type_google_open" translatable="false">android-tradehero-google-open</string>
    <string name="tap_stream_type_baidu_install" translatable="false">android-tradehero-baidu-install</string>
    <string name="tap_stream_type_baidu_open" translatable="false">android-tradehero-baidu-open</string>
    <string name="tap_stream_type_tencent_install" translatable="false">android-tradehero-tencent-install</string>
    <string name="tap_stream_type_tencent_open" translatable="false">android-tradehero-tencent-open</string>
    <string name="tap_stream_type_xiaomi_install" translatable="false">android-tradehero-xiaomi-install</string>
    <string name="tap_stream_type_xiaomi_open" translatable="false">android-tradehero-xiaomi-open</string>
    <string name="tap_stream_type_91_install" translatable="false">android-tradehero-91-install</string>
    <string name="tap_stream_type_91_open" translatable="false">android-tradehero-91-open</string>
    <string name="tap_stream_type_azhuosc_install" translatable="false">android-tradehero-azhuosc-install</string>
    <string name="tap_stream_type_azhuosc_open" translatable="false">android-tradehero-azhuosc-open</string>
    <string name="tap_stream_type_azhisc_install" translatable="false">android-tradehero-azhisc-install</string>
    <string name="tap_stream_type_azhisc_open" translatable="false">android-tradehero-azhisc-open</string>
    <string name="tap_stream_type_lenovo_install" translatable="false">android-tradehero-lenovo-install</string>
    <string name="tap_stream_type_lenovo_open" translatable="false">android-tradehero-lenovo-open</string>
    <string name="tap_stream_type_wandoujia_install" translatable="false">android-tradehero-wandoujia-install</string>
    <string name="tap_stream_type_wandoujia_open" translatable="false">android-tradehero-wandoujia-open</string>
    <string name="tap_stream_type_360_install" translatable="false">android-tradehero-360-install</string>
    <string name="tap_stream_type_360_open" translatable="false">android-tradehero-360-open</string>
    <string name="tap_stream_type_oppo_install" translatable="false">android-tradehero-oppo-install</string>
    <string name="tap_stream_type_oppo_open" translatable="false">android-tradehero-oppo-open</string>
    <string name="tap_stream_type_jifeng_install" translatable="false">android-tradehero-jifeng-install</string>
    <string name="tap_stream_type_jifeng_open" translatable="false">android-tradehero-jifeng-open</string>
    <string name="tap_stream_type_yyhui_install" translatable="false">android-tradehero-yyhui-install</string>
    <string name="tap_stream_type_yyhui_open" translatable="false">android-tradehero-yyhui-open</string>
    <string name="tap_stream_type_ydmm_install" translatable="false">android-tradehero-ydmm-install</string>
    <string name="tap_stream_type_ydmm_open" translatable="false">android-tradehero-ydmm-open</string>
    <string name="tap_stream_type_mptang_install" translatable="false">android-tradehero-mptang-install</string>
    <string name="tap_stream_type_mptang_open" translatable="false">android-tradehero-mptang-open</string>
    <string name="tap_stream_type_dianxin_install" translatable="false">android-tradehero-dianxin-install</string>
    <string name="tap_stream_type_dianxin_open" translatable="false">android-tradehero-dianxin-open</string>
    <string name="tap_stream_type_baiduguard_install" translatable="false">android-tradehero-baiduguard-install</string>
    <string name="tap_stream_type_baiduguard_open" translatable="false">android-tradehero-baiduguard-open</string>
    <string name="tap_stream_type_wifiwanneng_install" translatable="false">android-tradehero-wifiwanneng-install
    </string>
    <string name="tap_stream_type_wifiwanneng_open" translatable="false">android-tradehero-wifiwanneng-open</string>
    <string name="tap_stream_type_caipiao500_install" translatable="false">android-tradehero-caipiao500-install</string>
    <string name="tap_stream_type_caipiao500_open" translatable="false">android-tradehero-caipiao500-open</string>
    <string name="tap_stream_type_mengtian1_install" translatable="false">android-tradehero-mengtian1-install</string>
    <string name="tap_stream_type_mengtian1_open" translatable="false">android-tradehero-mengtian1-open</string>
    <string name="tap_stream_type_mengtian2_install" translatable="false">android-tradehero-mengtian2-install</string>
    <string name="tap_stream_type_mengtian2_open" translatable="false">android-tradehero-mengtian2-open</string>
    <string name="tap_stream_type_sougou_install" translatable="false">android-tradehero-sougou-install</string>
    <string name="tap_stream_type_sougou_open" translatable="false">android-tradehero-sougou-open</string>
    <string name="tap_stream_type_huawei_install" translatable="false">android-tradehero-huawei-install</string>
    <string name="tap_stream_type_huawei_open" translatable="false">android-tradehero-huawei-open</string>
    <string name="tap_stream_type_meizu_install" translatable="false">android-tradehero-meizu-install</string>
    <string name="tap_stream_type_meizu_open" translatable="false">android-tradehero-meizu-open</string>
    <string name="tap_stream_type_dianke1_install" translatable="false">android-tradehero-dianke1-install</string>
    <string name="tap_stream_type_dianke1_open" translatable="false">android-tradehero-dianke1-open</string>
    <string name="tap_stream_type_dianke2_install" translatable="false">android-tradehero-dianke2-install</string>
    <string name="tap_stream_type_dianke2_open" translatable="false">android-tradehero-dianke2-open</string>
    <string name="tap_stream_type_dianke3_install" translatable="false">android-tradehero-dianke3-install</string>
    <string name="tap_stream_type_dianke3_open" translatable="false">android-tradehero-dianke3-open</string>
    <string name="tap_stream_type_dianke4_install" translatable="false">android-tradehero-dianke4-install</string>
    <string name="tap_stream_type_dianke4_open" translatable="false">android-tradehero-dianke4-open</string>
    <string name="login_account">Account：</string>
    <string name="login_password">Password：</string>
    <string name="login_phone">手机号:</string>
    <string name="login_account_hint">Email or Mobile Number</string>
    <string name="company_hint">请填写您所在公司的中文或英文名称</string>
    <string name="phone_bind_hint">Please enter mobile Number</string>
    <string name="login_password_hint">6-20 Letters or Numbers</string>
    <string name="signup">免费开户</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="next_step">下一步</string>
    <string name="save_next_step">保存，下一步</string>
    <string name="signup_status_check">开户查询</string>
    <string name="dw_agreenment">点击上面“免费开户”按钮，即表示您同意</string>
    <string name="dw_agreenment_name">嘉维证券开户协议</string>
    <string name="dw_signup_preparation">开户准备</string>
    <string name="dw_signup_preparation_idcard">准备好您的二代身份证,您必须年满18周岁</string>
    <string name="dw_signup_preparation_wifi">开户需要上传图片等大流量数据，建议使用\nWIFI,4G或者3G网络</string>
    <string name="dw_signup_employment">就业情况</string>
    <string name="dw_signup_industry">所属行业</string>
    <string name="dw_signup_company">公司名称</string>
    <string name="dw_signup_stock_related_employee">您是否受雇于证券相关行业，如FINRA或FINRA成员公司</string>
    <string name="dw_signup_stock_holder">您是否为上市公司的持股股东</string>
    <string name="dw_signup_gov_officer">您是否曾近或现在是政府官员</string>
    <string name="login_verify_code">验证码:</string>
    <string name="login_verify_code_hint">Enter Code</string>
    <string name="login_get_verify_code">Get Code</string>
    <string name="discovery_discuss_send_report_a">广告信息</string>
    <string name="discovery_discuss_send_report_b">灌水刷屏</string>
    <string name="discovery_discuss_send_report_c">诽谤造谣</string>
    <string name="discovery_discuss_send_report_d">暴力色情</string>
    <string name="discovery_discuss_send_report_e">管理员封号</string>
</resources>