<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_up_form_wrapper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:background="#f3f3f3">

    <TextView
        android:layout_marginTop="@dimen/margin_xmedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dw_signup_preparation"
        android:textSize="@dimen/text_medium"
        android:textColor="#000000" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/id_card"/>

    <TextView
        android:layout_marginTop="@dimen/margin_xmedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dw_signup_preparation_idcard"
        android:textSize="@dimen/text_medium"
        android:textColor="#000000" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/wifi"/>

    <TextView
        android:layout_marginTop="@dimen/margin_xmedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dw_signup_preparation_wifi"
        android:textSize="@dimen/text_medium"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/basic_blue_selector_round_corner"
        android:text="@string/next_step"
        android:textColor="@color/th_white"
        android:gravity="center"
        android:textSize="17sp"/>

</LinearLayout>

