<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="top"
    android:background="#f3f3f3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/dw_signup_employment"
            android:textSize="@dimen/text_medium"/>
        <Spinner
            android:id="@+id/employment"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:entries="@array/dw_signup_employment"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#bfbfbf"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/dw_signup_industry"
            android:textSize="@dimen/text_medium"/>
        <Spinner
            android:id="@+id/industry"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:entries="@array/dw_signup_industry"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#bfbfbf"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/dw_signup_company"
            android:textSize="@dimen/text_medium"/>
        <EditText
            android:id="@+id/company"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:textSize="@dimen/text_medium"
            android:singleLine="true"
            android:hint="@string/company_hint"
            android:textColorHint="#bfbfbf"
            android:textColor="#000000"
            android:background="@color/white"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#bfbfbf"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/dw_signup_stock_related_employee"
            android:textSize="@dimen/text_small"
            />
        <Switch
            android:id="@+id/isStockRelatedEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:textOn="@string/yes"
            android:textOff="@string/no"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#bfbfbf"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/dw_signup_stock_holder"
            android:textSize="@dimen/text_small"
            />
        <Switch
            android:id="@+id/isStockHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:textOn="@string/yes"
            android:textOff="@string/no"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#bfbfbf"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/dw_signup_gov_officer"
            android:textSize="@dimen/text_small"
            />
        <Switch
            android:id="@+id/isGovOfficer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:textOn="@string/yes"
            android:textOff="@string/no"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#bfbfbf"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/basic_blue_selector_round_corner"
        android:text="@string/save_next_step"
        android:textColor="@color/th_white"
        android:gravity="center"
        android:textSize="17sp"/>

</LinearLayout>

